--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "6",
     "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-burger-menu": "^3.0.6",
@@ -32,7 +33,6 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
-    "react-three-state-checkbox": "^2.0.0",
     "react-use": "^17.3.2",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
