--- a/nginx/templates/dev.conf.template
+++ b/nginx/templates/dev.conf.template
@@ -23,7 +23,9 @@ server {
     }
 
     location /remote/ {
-        rewrite /remote/(.*) ${CRG_REMOTE_HOST}/$1?apikey=${CRG_REOMTE_APIKEY} redirect;
+        rewrite /remote/(.*) $1?apikey=${CRG_REOMTE_APIKEY} break;
+        proxy_pass ${CRG_REMOTE_HOST};
+        proxy_set_header Host ${CRG_REMOTE_HOST};
     }
 
     location /scrape {
