--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
+    "@chiragrupani/fullscreen-react": "^1.1.1",
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@testing-library/jest-dom": "^5.14.1",
@@ -33,6 +34,7 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
+    "react-toast-notifications": "^2.5.1",
     "react-use": "^17.3.2",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
