--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -32,6 +32,7 @@
     "react-contextmenu": "^2.14.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
+    "react-full-screen": "^1.1.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-toast-notifications": "^2.5.1",
