--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -28,9 +28,9 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-burger-menu": "^3.0.6",
-    "react-contextmenu": "^2.14.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
+    "react-full-screen": "^1.1.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-use": "^17.3.2",
