--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -31,6 +32,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-full-screen": "^1.1.0",
+    "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-use": "^17.3.2",
