--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -24,17 +24,20 @@
     "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
     "prettier": "^2.6.2",
+    "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-burger-menu": "^3.0.6",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-full-screen": "^1.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
+    "use-query-params": "^1.2.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
