--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -29,6 +29,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-full-screen": "^1.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "sass": "^1.50.0",
