--- a/nginx/templates/dev.conf.template
+++ b/nginx/templates/dev.conf.template
@@ -16,6 +16,10 @@ server {
     location /api/ {
         rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 
     location ~* \.(dec|zdec)$ {
