--- a/.gitignore
+++ b/.gitignore
@@ -102,16 +102,14 @@ dist
 # TernJS port file
 .tern-port
 
-data/
 tmp/
 .idea/
+.env
 venv/
 *.pyc
 docker-pip-freeze.txt
 docker-venv/
 docker-compose-local.yml
-docker-compose.yml
-mnt/
 runner.py
 crgwatch/
 watch/
