--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-MNT_PATH=./mnt
+MNT_PATH=.mnt
 CRG_REMOTE_HOST=https://PLACEHOLDER
 CRG_REMOTE_APIKEY=PLACEHOLDER
 SCRAPE_HOST=http://PLACEHOLDER:5000
