feat: min filesize filter

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
-MNT_PATH=.mnt
+CONFIG_PATH=./mnt/config.yml
+TIMEZONE=America/Denver
+
+DATA_MNT_DIR=./mnt/data
+LOG_DIR=./mnt/log
+
 CRG_REMOTE_HOST=https://PLACEHOLDER
 CRG_REMOTE_APIKEY=PLACEHOLDER
 SCRAPE_HOST=http://PLACEHOLDER:5000
