feat: file tag component

--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-table": "^7.7.10",
+    "@types/react-tag-autocomplete": "^6.1.1",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "classnames": "^2.3.1",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
+    "react-tag-autocomplete": "^6.3.0",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5",
