--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -28,6 +28,7 @@
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-burger-menu": "^3.0.6",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-full-screen": "^1.1.0",
     "react-router-dom": "^6.3.0",
