--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -8,24 +8,11 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@react-oauth/google": "^0.10.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/classnames": "^2.3.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-table": "^7.7.10",
-    "@types/react-tag-autocomplete": "^6.1.1",
-    "@types/styled-components": "^5.1.25",
-    "@types/uuid": "^8.3.4",
     "classnames": "^2.3.1",
     "framer-motion": "6",
     "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
     "leet-decode": "^0.0.3",
-    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-burger-menu": "^3.0.6",
     "react-cookie": "^4.1.1",
@@ -35,10 +22,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-tag-autocomplete": "^6.3.0",
-    "sass": "^1.50.0",
-    "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.4.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
@@ -68,6 +52,22 @@
     ]
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-table": "^7.7.10",
+    "@types/react-tag-autocomplete": "^6.1.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
+    "typescript": "^4.4.2"
   }
 }
