--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ crgw-daemon/daemon.egg-info/SOURCES.txt
 crgw-daemon/daemon.egg-info/requires.txt
 crgw-daemon/daemon.egg-info/PKG-INFO
 crgw-daemon/daemon.egg-info/dependency_links.txt
+
+docker-compose.yml
