--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -5,26 +5,26 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@react-oauth/google": "^0.12.1",
-    "classnames": "^2.3.2",
-    "framer-motion": "^10.16.16",
-    "jszip": "^3.10.1",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "@react-oauth/google": "^0.10.0",
+    "classnames": "^2.3.1",
+    "framer-motion": "6",
+    "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
     "leet-decode": "^0.0.3",
-    "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
-    "react-cookie": "^7.1.0",
-    "react-dom": "^18.2.0",
-    "react-full-screen": "^1.1.1",
-    "react-router-dom": "^6.20.1",
+    "react": "^18.0.0",
+    "react-burger-menu": "^3.0.6",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.0.0",
+    "react-full-screen": "^1.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-table": "^7.8.0",
-    "react-tag-autocomplete": "^7.3.0",
-    "styled-components": "^6.1.8",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "react-table": "^7.7.0",
+    "react-tag-autocomplete": "^6.3.0",
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,21 +52,22 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-table": "^7.7.19",
-    "@types/react-tag-autocomplete": "^6.1.7",
-    "@types/styled-components": "^5.1.26",
-    "@types/uuid": "^9.0.7",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.3",
-    "typescript": "^5.3.3"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-table": "^7.7.10",
+    "@types/react-tag-autocomplete": "^6.1.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
+    "typescript": "^4.4.2"
   }
 }
