--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@react-oauth/google": "^0.10.0",
     "classnames": "^2.3.1",
-    "framer-motion": "6",
+    "framer-motion": "^6.5.1",
     "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
     "leet-decode": "^0.0.3",
@@ -21,7 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
-    "react-tag-autocomplete": "^6.3.0",
+    "react-tag-autocomplete": "^7.5.1",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
@@ -55,19 +55,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/classnames": "^2.3.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-table": "^7.7.10",
-    "@types/react-tag-autocomplete": "^6.1.1",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
-    "prettier": "^2.6.2",
+    "prettier": "^3.0.0",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
-    "typescript": "^4.4.2"
+    "typescript": "^5.0.0"
   }
 }
