--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -13,6 +13,7 @@
     "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
     "leet-decode": "^0.0.3",
+    "match-sorter": "^8.1.0",
     "react": "^18.0.0",
     "react-burger-menu": "^3.0.6",
     "react-cookie": "^4.1.1",
