--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -10,10 +10,9 @@
     "@react-oauth/google": "^0.10.0",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
+    "fuzzysort": "^3.1.0",
     "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
-    "leet-decode": "^0.0.3",
-    "match-sorter": "^8.1.0",
     "react": "^18.0.0",
     "react-burger-menu": "^3.0.6",
     "react-cookie": "^4.1.1",
