--- a/crgw-ui/package.json
+++ b/crgw-ui/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-tag-autocomplete": "^7.5.1",
+    "recharts": "^3.3.0",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
