--- a/.github/workflows/prettier-bot.yml
+++ b/.github/workflows/prettier-bot.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install and run Prettier
         run: |
           cd crgw-ui
-          npm install --no-package-lock --only=dev prettier @trivago/prettier-plugin-sort-imports
+          npm install --legacy-peer-deps prettier @trivago/prettier-plugin-sort-imports
           npx prettier --write .
 
       - name: Check for changes
